# WistiaVideosDownloader

./: LICENSE  README.md  VideosToDownload.json  WTVideos.cabal
app/: Main.hs
src/: Directories.hs  Downloader.hs  FindInString.hs  WTVideo.hs  WistiaJSON.hs
