name:                WTVideos
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/rhvall/WistiaVideosDownloader
license:             BSD3
license-file:        LICENSE
author:              rhvall
maintainer:          rhvall
copyright:           2017 rhvall
category:            Desktop
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     WTVideo, Directories, Downloader, FindInString, WistiaJSON
  build-depends:       base >= 4.7 && < 5,
    aeson >= 0.2.2,
    lens-aeson >= 1,
    lens >= 4.15,
    bytestring >= 0.10,
    directory >= 1.3,
    http-conduit >= 2.2,
    network >= 2.6,
    io-streams >= 1.3,
    exceptions >= 0.8,
    stringsearch >= 0.3,
    text >= 1.2,
    transformers >= 0.5,
    simple-download >= 0.0.2,
    bytestring >= 0.10,
    http-conduit >= 2.2,
    exceptions >= 0.8
  default-language:    Haskell2010

executable WTVideos-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , WTVideos
  default-language:    Haskell2010

test-suite WTVideos-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , WTVideos
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rhvall/WistiaVideosDownloader
